Font color and font weight for navbutton and fix spacing in hero title for iphone 5

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,29 @@
         display: none!important
     }
 }
+
+/* iPhone 5 ----------- */
+@media (max-width: 576px) {
+    header .header-title{
+        font-size: 1.5rem !important;
+        font-family: 'Cinzel', serif;
+        word-spacing: 5px;
+        font-weight: 100;
+        padding-top: 8rem !important;
+    } 
+}
+
+#mainNav .navbar-toggler {
+    font-size: 12px;
+    right: 0;
+    padding: 13px;
+    text-transform: uppercase;
+    color: #212529;
+    border: 0;
+    background-color: #fed136;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+}
 .header-nav-contact{
     height: auto;
     width: 100%;
